--- a/sass/_section-partners.scss
+++ b/sass/_section-partners.scss
@@ -38,7 +38,7 @@
 @media only screen and(max-width: 50em) {
   //800px
   .section-partners {
-    padding: 2rem 7%;
+    padding: 2rem 10%;
   }
 }
 
